# omnidrive

./: .codexrules  .gitignore  ARCHITECT_STATE.md  CLAUDE.md  CLEAN_MACHINE_CHECKLIST.md  Cargo.toml  OmniDrive Clean-Machine Checklist.md  OmniDrive_Roadmap_v2.md  PROJECT_STATUS.md  README.md  STATUS.md  omnidrive_sqlite_schema_v1.md  plan.md  roadmap.md  spec_review.docx
.claude/commands/: refresh.md
.githooks/: pre-push
.github/workflows/: ci.yml
angelctl/: Cargo.toml
angeld/: Cargo.toml
angeld/src/: acl.rs  api.rs  api_error.rs  auto_lock.rs  autostart.rs  aws_http.rs  cache.rs  cloud_guard.rs  config.rs  db.rs  device_identity.rs  diagnostics.rs  disaster_recovery.rs  downloader.rs  gc.rs  identity.rs  ingest.rs  lib.rs  lock_flow.rs  logging.rs  main.rs  migrator.rs  onboarding.rs  packer.rs  peer.rs  pipe_server.rs  recovery.rs  repair.rs  runtime_paths.rs  scrubber.rs  secure_fs.rs  sharing.rs  shell_integration.rs  shell_state.rs  smart_sync.rs  uploader.rs  vault.rs  virtual_drive.rs  watcher.rs  win_acl.rs  (+2 more)
angeld/src/api/: audit.rs  auth.rs  auto_lock.rs  diagnostics.rs  error.rs  files.rs  maintenance.rs  mod.rs  oauth.rs  onboarding.rs  recovery.rs  settings.rs  sharing.rs  stats.rs  vault.rs
angeld/static/: index.html  legacy.html  wizard.html  wizard.js
angeld/tests/: e2e_auto_lock.rs  e2e_basic.rs  e2e_ingest.rs  e2e_reconciliation.rs  e2e_recovery.rs  e2e_scrubber_repair.rs  e2e_shell_recovery.rs  e2e_sync.rs
angeld/tests/common/: mod.rs
docs/: KNOWN_ISSUES.md  SMOKE_CHECKLIST.md  crypto-spec.md  perf-baseline-2026-05-17.md
docs/archive/: PROJECT_STATUS.md  roadmap.md  spec_review.md
docs/superpowers/plans/: 2026-04-18-oauth-frontend.md  2026-04-18-safety-numbers.md  2026-04-26-wizard-onboarding.md  2026-04-28-wizard-redesign.md  2026-05-11-faza-0-qa-foundation.md  2026-05-18-alpha-A-b-auto-lock-plan.md  2026-05-21-alpha-A-c-zeroize-keybytes-plan.md  2026-05-25-alpha-B-a-argon2id-params-bump-plan.md  2026-06-04-alpha-C-a-real-x25519-keypair.md  2026-06-04-alpha-C-b-graft-identity-bundle.md  2026-06-05-alpha-B-b-mlkem-hybrid-wrap.md  2026-06-06-beta-task0-crypto-debt-elimination.md  2026-06-06-beta-task1-p1002-snapshot-fetch-worker.md  2026-06-06-beta-task2-p1003-p1004-cloud-redundancy.md  2026-07-20-gamma-conflict-copy-verification.md  2026-07-20-gamma-soft-delete.md  auto_lock_frontend_blueprint.html
docs/superpowers/specs/: 2026-04-18-oauth-frontend-design.md  2026-04-18-safety-numbers-design.md  2026-04-20-mobile-qr-pairing-design.md  2026-04-26-wizard-onboarding-design.md  2026-04-28-wizard-redesign.md  2026-05-11-code-audit.md  2026-05-18-alpha-A-b-auto-lock-design.md  2026-05-21-alpha-A-c-zeroize-keybytes-design.md  2026-05-25-alpha-B-a-argon2id-params-bump-design.md  2026-06-04-alpha-C-b-graft-identity-bundle-design.md  2026-06-05-alpha-B-b-mlkem-hybrid-wrap-design.md  2026-06-06-crypto-review.md  2026-07-20-gamma-conflict-copy-verification-design.md  2026-07-20-gamma-soft-delete-design.md
docs/ui-mockups/: stitch-dashboard.html
docs/ui-mockups/raw/: 01-pliki.html  02-skarbiec.html  03-multi-device.html  04-chmura.html  05-audyt.html  06-ustawienia.html
docs/ui-mockups/raw/mobile/: 01-lock-screen.html  02-home.html  03-pliki.html  04-skarbiec.html  05-szczegoly-pliku.html  06-urzadzenia.html  07-ustawienia.html
icons/: manifest.webmanifest
installer/: angeld-autostart.vbs  omnidrive.iss
omnidrive-cli/: Cargo.toml
omnidrive-cli/src/: main.rs
omnidrive-core/: Cargo.toml
omnidrive-core/src/: crypto.rs  ffi.rs  hybrid.rs  layout.rs  lib.rs  payloads.rs  pqkem.rs
omnidrive-shell-ext/: Cargo.toml  dev_reload.ps1
omnidrive-shell-ext/src/: lib.rs
omnidrive-tray/: Cargo.toml
omnidrive-tray/src/: main.rs
scripts/: b8-acceptance-check.ps1  b8-dell-clean-reset.ps1  b8-dell-join-existing.ps1  b8-lenovo-cloud-enable.ps1  build-installer.ps1  install-git-hooks.ps1  md-to-docx.ps1  perf-baseline.ps1
