[package]
name = "angeld"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
dotenvy = "0.15"
notify = "8.1.0"
omnidrive-core = { path = "../omnidrive-core" }
reed-solomon-erasure = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
zerocopy = { version = "0.7", features = ["derive"] }
