[package]
name = "angeld"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = "0.8"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-http-client = { version = "1", features = ["hyper-014"] }
bytes = "1"
dotenvy = "0.15"
hyper-rustls = { version = "0.24", default-features = false, features = ["webpki-tokio", "http1", "http2", "tls12"] }
http-body = "1"
http-body-util = "0.1"
notify = "8.1.0"
omnidrive-core = { path = "../omnidrive-core" }
reed-solomon-erasure = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
zerocopy = { version = "0.7", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_System_CorrelationVector",
    "Win32_System_IO",
] }
