[package]
name = "angeld"
version = "0.3.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
bip39 = "2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-http-client = { version = "1", features = ["hyper-014"] }
bytes = "1"
dotenvy = "0.15"
hkdf = "0.12"
hyper-rustls = { version = "0.24", default-features = false, features = ["webpki-tokio", "http1", "http2", "tls12"] }
http-body = "1"
http-body-util = "0.1"
notify = "8.1.0"
omnidrive-core = { path = "../omnidrive-core" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reed-solomon-erasure = "6"
secrecy = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sysinfo = { version = "0.30", default-features = false }
zerocopy = { version = "0.7", features = ["derive"] }

[dev-dependencies]
mockito = "0.31"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_CorrelationVector",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }

[features]
test-helpers = []
