[package]
name = "omnidrive-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "omnidrive"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
