[package]
name = "omnidrive-cli"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "omnidrive"
path = "src/main.rs"

[dependencies]
angeld = { path = "../angeld" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
