[package]
name = "omnidrive-core"
version = "0.1.20"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
aes-kw = "0.2"
argon2 = "0.5"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
zerocopy = { version = "0.7", features = ["derive"] }
