[package]
name = "omnidrive-shell-ext"
version = "0.3.3"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62"
