[package]
name = "omnidrive-tray"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "omnidrive-tray"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
tao = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi"] }
